--- a/browser/js/common/directives/corners/corners.html
+++ b/browser/js/common/directives/corners/corners.html
@@ -5,14 +5,14 @@
     <div class="col-xs-4 grid-item" ng-class="{'active-box': box[2]}">X</div>
 </div>
 <div class="row row-centered" id="grid-row">
-    <div class="col-xs-4 grid-item" ng-class="{'active-box': box[7]}">X</div>
-    <div class="col-xs-4 grid-item" id="grid-center"><button class="btn btn-primary" ng-click="zero()">Zero</button>X:{{eyeX.toFixed(0)}}, Y:{{eyeY.toFixed(0)}}</div>
-    <div class="col-xs-4 grid-item" ng-class="{'active-box': box[3]}">X</div>
+    <div class="col-xs-4 grid-item" ng-class="{'active-box': box[3]}">{{xDiff}}</div>
+    <div class="col-xs-4 grid-item" id="grid-center" ng-class="{'active-box': box[4]}"><button class="btn btn-primary" ng-click="zero()">Zero</button></div>
+    <div class="col-xs-4 grid-item" ng-class="{'active-box': box[5]}">{{yDiff}}</div>
 </div>
 <div class="row row-centered" id="grid-row">
-    <div class="col-xs-4 grid-item" ng-class="{'active-box': box[4]}">X</div>
-    <div class="col-xs-4 grid-item" ng-class="{'active-box': box[5]}">X</div>
     <div class="col-xs-4 grid-item" ng-class="{'active-box': box[6]}">X</div>
+    <div class="col-xs-4 grid-item" ng-class="{'active-box': box[7]}">X</div>
+    <div class="col-xs-4 grid-item" ng-class="{'active-box': box[8]}">X</div>
 </div>
 </div>
 
